Version 2.1.199
    Renamed Deepslate Lapis Lazuli Ore to Deepslate Lapis Ore in experience.yml and config.yml
Version 2.1.198
    Fixed a bug where Smelting didn't work with the new 1.17 materials
    Updated dependency Adventure to 4.8.0 (thanks TheBusyBiscuit)

Version 2.1.197
    This update adds compatibility for new mobs and blocks from 1.17
    This build of mcMMO should be more compatible with certain versions of ViaVersion
    Players are no longer launched from Minecarts when using a Fishing Rod (they are still dismounted) thanks lexikiq
    Updated Japanese locale (thanks ViaSnake)
    Updated Brazil Portuguese (pt_BR) locale (thanks Paulo Guilherme)
    Added Goat to experience.yml for combat and taming
    Added Axolotl to experience.yml for combat and taming
    Added Glow_Squid to experience.yml for combat and taming
    Added Glow Berries to Farmer's Diet
    Updated Super Breaker to recognize the new pick-axe appropriate blocks
    Updated Tree Feller to recognize Azalea Leaves

    Added Rooted Dirt to experience.yml for Excavation
    Added Small Dripleaf to experience.yml for Herbalism
    Added Big Dripleaf to experience.yml for Herbalism
    Added Moss Block to experience.yml for Herbalism
    Added Cave Vines to experience.yml for Herbalism
    Added Cave Vines Plant to experience.yml for Herbalism
    Added Glow Lichen to experience.yml for Herbalism
    Added Tuff to experience.yml for Mining
    Added Calcite to experience.yml for Mining
    Added Smooth Basalt to experience.yml for Mining
    Added Block_Of_Amethyst to experience.yml for Mining
    Added Budding Amethyst to experience.yml for Mining
    Added Small_Amethyst_Bud to experience.yml for Mining
    Added Medium Amethyst Bud to experience.yml for Mining
    Added Large Amethyst Bud to experience.yml for Mining
    Added Amethyst Cluster to experience.yml for Mining
    Added Deepslate to experience.yml for Mining
    Added Cobbled Deepslate to experience.yml for Mining